# AnyIterator

./: AnyIterator.hpp  README.md  any_iterator.hpp  appveyor.yml
tests/: CMakeLists.txt  Readme.md  any_iterator_virtual.hpp  basic.cpp  benchmark.cpp  benchmark_plotter.py  benchmark_plotter.pyproj
tests/benchmark_results/: result.csv  result_list.csv  result_list_gcc.csv  result_list_msvc.csv  result_map.csv  result_map_gcc.csv  result_map_msvc.csv
